Add central image

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 			<div class = 'title'>Fleep</div>
 		</div>
 		<div class = 'fleepEnv'>
+			<img class = fleep src="resources/baby.png" alt="Fleep">
+		</div>
+		<div class = 'interactBar'>
 
 		</div>
 	</body>
