--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang=en>
 	<head>
 		<meta charset="utf-8">
-		<title>Template</title>
+		<title>Fleep</title>
 		<link rel="stylesheet" href="style.css">
+		<link rel="shortcut icon" href="resources/baby.png">
 	</head>
 
 	<body>
